# depscan

./: README.md  pyproject.toml
depscan/: __init__.py  checkers.py  cli.py  parsers.py
tests/: test_checkers.py  test_cli.py  test_parsers.py
